--- a/proj1/index.html
+++ b/proj1/index.html
@@ -54,7 +54,7 @@
 
 <h3 align="middle">Part 2: Antialiasing triangles</h3>
 
-<p><b>Data Structures:</b> We updated the <i>sample_buffer<i/> to hold <i>height * width * sample_rate colors</i>, enabling us to store the color information of every single super sample. </p>
+<p><b>Data Structures:</b> We updated the <i>sample_buffer</i> to hold <i>height * width * sample_rate colors</i>, enabling us to store the color information of every single super sample. </p>
 <p><b>Our supersampling algorithm is as follows:</b></p>
 <p><ol>
   <li>In <i>rasterize_triangle<,i>, we scale the original image by <i>sqrt(sample_rate)</i> pixels in each axis so the coordinates match the image if it were the high resolution version. Then we conduct the 3 line test for each pixel’s n=<i>sample_rate</i> sections (essentially sampling (3 line test) as usual but with the scaled image). If the pixel’s subsection passes the 3 line test, fill the color into the sample buffer’s high resolution location (index into the <i>sample_buffer</i> as if it were a matrix)</li>
