--- a/proj1/index.html
+++ b/proj1/index.html
@@ -25,7 +25,7 @@
 
 <h1 align="middle">CS 184: Computer Graphics and Imaging, Spring 2023</h1>
 <h1 align="middle">Project 1: Rasterizer</h1>
-<h2 align="middle">Srisai Nachuri, Maddy Chen, CS184-??</h2>
+<h2 align="middle">Srisai Nachuri, Maddy Chen, CS184</h2>
 
 <br><br>
 
