--- a/proj1/index.html
+++ b/proj1/index.html
@@ -70,20 +70,21 @@
   </ul>
 </p>
   
+<p>screenshots of basic/test4.svg with the default viewing parameters at sample rates 1, 4, and 16. </p>
 <div align="middle">
   <table style="width=100%">
     <tr>
       <td>
         <img src="images/task2_1.png" align="middle" width="400px"/>
-        <figcaption align="middle">screenshot of basic/test4.svg with the default viewing parameters and sample rate 1.</figcaption>
+        <figcaption align="middle">sample rate 1.</figcaption>
       </td>
       <td>
         <img src="images/task2_4.png" align="middle" width="400px"/>
-        <figcaption align="middle">screenshot of basic/test4.svg with the default viewing parameters and sample rate 4.</figcaption>
+        <figcaption align="middle">sample rate 4.</figcaption>
       </td>
       <td>
         <img src="images/task2_16.png" align="middle" width="400px"/>
-        <figcaption align="middle">screenshot of basic/test4.svg with the default viewing parameters and sample rate 16.</figcaption>
+        <figcaption align="middle">sample rate 16.</figcaption>
       </td>
     </tr>
   </table>
