center bottom row?

--- a/proj1/index.html
+++ b/proj1/index.html
@@ -83,7 +83,7 @@
         <figcaption align="middle">sample rate 4.</figcaption>
       </td>
      </tr>
-     <tr>
+     <tr align="middle">
       <td>
         <img src="images/task2_16.png" align="middle" width="400px"/>
         <figcaption align="middle">sample rate 16.</figcaption>
