Add task 5 and 6 images

--- a/proj1/index.html
+++ b/proj1/index.html
@@ -120,9 +120,63 @@
 
 <h3 align="middle">Part 5: "Pixel sampling" for texture mapping</h3>
 
-
+  
+<p>screenshots using nearest sampling at 1 sample per pixel, nearest sampling at 16 samples per pixel, bilinear sampling at 1 sample per pixel, and bilinear sampling at 16 samples per pixel.</p>
+<div align="middle">
+  <table style="width=100%">
+    <tr>
+      <td>
+        <img src="images/task5n-1.png" align="middle" width="400px"/>
+        <figcaption align="middle">nearest sampling at sample rate 1.</figcaption>
+      </td>
+      <td>
+        <img src="images/task5n-16.png" align="middle" width="400px"/>
+        <figcaption align="middle">nearest sampling at sample rate 16.</figcaption>
+      </td>
+    </tr>
+    <br>
+    <tr>
+      <td>
+        <img src="images/task5b-1.png" align="middle" width="400px"/>
+        <figcaption align="middle">bilinear sampling at sample rate 1.</figcaption>
+      </td>
+      <td>
+        <img src="images/task5b-16.png" align="middle" width="400px"/>
+        <figcaption align="middle">bilinear sampling at sample rate 16.</figcaption>
+      </td>
+    </tr>
+  </table>
+</div>
+  
+  
 <h3 align="middle">Part 6: "Level sampling" with mipmaps for texture mapping</h3>
 
+  <p>show us four versions of our frog image, using the combinations of L_ZERO and P_NEAREST, L_ZERO and P_LINEAR, L_NEAREST and P_NEAREST, as well as L_NEAREST and P_LINEAR</p>
+  <div align="middle">
+  <table style="width=100%">
+    <tr>
+      <td>
+        <img src="images/task6-l0-pn.png" align="middle" width="400px"/>
+        <figcaption align="middle">L_ZERO and P_NEAREST.</figcaption>
+      </td>
+      <td>
+        <img src="images/task6-l0-pl.png" align="middle" width="400px"/>
+        <figcaption align="middle">L_ZERO and P_LINEAR.</figcaption>
+      </td>
+    </tr>
+    <br>
+    <tr>
+      <td>
+        <img src="images/task6-ln-pn.png" align="middle" width="400px"/>
+        <figcaption align="middle">L_NEAREST and P_NEAREST.</figcaption>
+      </td>
+      <td>
+        <img src="images/task6-ln-pl.png" align="middle" width="400px"/>
+        <figcaption align="middle">L_NEAREST and P_LINEAR.</figcaption>
+      </td>
+    </tr>
+  </table>
+</div>
 
 
 <h2 align="middle">Section III: Art Competition</h2>
