--- a/proj1/index.html
+++ b/proj1/index.html
@@ -62,24 +62,54 @@ Our algorithm is no worse than one that checks each sample within the bounding b
 <br>
 <br>
 <h3 align="middle">Part 2: Antialiasing triangles</h3>
-
-<p><b>Data Structures:</b> We updated the <i>sample_buffer</i> to hold <i>height * width * sample_rate colors</i>, enabling us to store the color information of every single super sample. </p>
-<p><b>Our supersampling algorithm is as follows:</b></p>
+  
+  <p>In this task, we implement supersampling to reduce aliasing and jaggies in the simple triangle rasterization in task 1. 
+    Supersampling entails sampling at a higher sampling rate than the frame buffer into our sample buffer and then using this extra sampling 
+    for smoother rasterization in the frame buffer. </p>
+  
+  <p><b>Data Structures Modified</b>: We updated the sample_buffer to hold <i>height * width * sample_rate</i> colors, enabling us to store the color information of every single super sample. For <i>sample_rate</i> of 1, this will match the resolution of the <i>framebuffer</i>.</p>
+  <p><b>Our supersampling algorithm is as follows:</b></p>
 <p><ol>
-  <li>In <i>rasterize_triangle</i>, we scale the original image by <i>sqrt(sample_rate)</i> pixels in each axis so the coordinates match the image if it were the high resolution version. Then we conduct the 3 line test for each pixel’s n=<i>sample_rate</i> sections (essentially sampling (3 line test) as usual but with the scaled image). If the pixel’s subsection passes the 3 line test, fill the color into the sample buffer’s high resolution location (index into the <i>sample_buffer</i> as if it were a matrix)</li>
-  <li>Since only <i>rasterize_triangle</i> had supersampling, we edited <i>fill_pixel</i> to supersample for when <i>rasterize_line</i> or <i>rasterize_point</i> is called. We had to adjust for how the lines and points were being rasterized through the <i>sample_buffer</i> since we were not implementing supersampling those. The default <i>fill_pixel</i> used to directly map 1 pixel from <i>rasterize_line</i> or <i>rasterize_point</i> to a single pixel in the <i>sample_buffer</i>. However, if the <i>sampling_rate</i> is now greater than 1 and we resize the <i>sample_buffer</i>, 1 pixel in <i>rasterize_line</i> or <i>rasterize_point</i> actually maps to <i>sample_rate</i> number of pixels in the <i>sample_buffer</i>, so <i>fill_pixel</i> correctly fills in all the necessary pixels based on the sampling rate.</li> 
-  <li>Then in <i>resolve_to_framebuffer</i>, we need to map our supersampled pixels back into the single pixel that actually maps to the <i>framebuffer</i>. To do this, we iterate over the pixels of the <i>framebuffer</i> and pick out the <i>sample_rate</i> number of pixels in the <i>sample_buffer</i> associated with the pixel. We then average the color of all these subsamples to set the pixel color of the <i>framebuffer</i>.</li>
+  <li>In <i>rasterize_triangle</i>, we scale the input triangle coordinates by <i>sqrt(sample_rate)</i> pixels in each axis so the scaled coordinates 
+    match the pixel coordinates as in the higher resolution version (the resized <i>sample_buffer</i>). We then iterate over the pixels of the triangle 
+    bounding box in terms of the remapped pixel coordinates. At higher sampling rates, this means we test more points since each original (unscaled) 
+    pixel was subdivided into <i>sample_rate</i> pixels. Iterating over these pixels, we conduct the 3-line-test as before and fill the color into the 
+    <i>sample_buffer</i> if the pixels are within the triangle. This process should correctly map colors in the higher resolution <i>sample_buffer</i>.</li>
+  <li>Since only <i>rasterize_triangle</i> had supersampling, we needed to ensure that <i>rasterize_point</i> and <i>rasterize_line</i> (which are not 
+    supersampled), correctly map colors into the resized <i>sample_buffer</i>. This process was in the <i>fill_pixel</i> function. The default 
+    <i>fill_pixel</i> used to directly map 1 pixel from <i>rasterize_line</i> or <i>rasterize_point</i> to a single pixel in the <i>sample_buffer</i>. 
+    However, if the <i>sampling_rate</i> is now greater than 1 and we resize the <i>sample_buffer</i>, 1 pixel in <i>rasterize_line</i> or 
+    <i>rasterize_point</i> actually maps to <i>sample_rate</i> number of pixels in the <i>sample_buffer</i>, so we modified <i>fill_pixel</i> to correctly
+    fill in all the necessary pixels based on the <i>sampling_rate</i>.</li>
+  <li>Finally, in <i>resolve_to_framebuffer<i>, we need to map our supersampled pixels back into the single pixel that actually maps to the 
+    <i>framebuffer</i>. To do this, we iterate over the pixels of the <i>framebuffer</i> and pick out the <i>sample_rate<i> number of pixels in the 
+    <i>sample_buffer</i> associated with the pixel. We then average the color of all these subsamples to set the pixel color of the <i>framebuffer</i>.</li>
   </ol></p>
-<p>For lines and points supersampling won’t change anything since supersampling is not implemented (i.e. all subsamples are the same color), but supersampling is useful for toning down jaggies and any aliasing. It allows more consideration of the fact that the one part of the pixel you sample might not reflect the entire pixel’s color. We use supersampling to antialias the triangles because for pixels with a small part of the triangle edge in it (and thus missed by the center point sampling), it allows for the small part of the triangle that is in the pixel to be considered into the color of the pixel.</p>
-<p><b>Modifications to pipeline:</b>
+  <p>For lines and points, supersampling won’t change anything since it is not implemented (i.e. all subsamples are the same color), but supersampling 
+    is useful for toning down jaggies and any aliasing when rasterizing shapes based on triangles. It allows more consideration of the fact that the 
+    one part of the pixel you sample might not reflect the entire pixel’s color. Instead pixels are colored based on how much of the pixel is actually 
+    in the triangle, which allows for smoother changes in color at the edges of triangles as opposed to sharp abrupt changes without supersampling
+    (only using a single center point sample) that make aliasing more prominent. Viewed at a larger scale, the image’s edges also look smoother with 
+    the antialiasing.</p>
+  
+<p>Supersampling entailed the following modifications to the rasterization pipeline (based on steps from cs184 project 1, task 2 specification):
   <ul>
-    <li>Step 3: Rasterizing the triangles for the interior image will supersample based on the sample rate into a <i>sample_buffer</i> that may be resized so not all pixels of the original pixel may map to the same color. We also did not use the original <i>fill_pixel</i> function given when implementing supersampling.</li>
-    <li>Step 4: When rasterizing the square boundary, since lines are being rasterized, the <i>sample_buffer</i> in between may map multiple pixels if the sample is greater than 1 but this does not have any effect on the actual <i>framebuffer</i> since they are averaged out again.</li>
-    <li>Step 5: Based on the <i>sample_rate</i> increasing, it is no longer a 1:1 mapping, so instead of directly mapping the <i>sample_buffer</i> pixels to the <i>framebuffer</i> pixels, colors of the <i>sample_buffer</i> are averaged and then the <i>framebuffer</i> takes on the average color of the supersampled pixels.</li>
+    <li>We modified the line/triangle/point rasterization step. Rasterizing the triangles for the interior image will supersample based on the 
+      <i>sample_rate</i> into a <i>sample_buffer</i> that may be resized so not all pixels of the original pixel may map to the same color. 
+      Additionally rasterizing points and lines will fill into multiple pixels in the <i>sample_buffer</i> based on larger sample rates (Step 3).</li>
+    <li>When rasterizing the square boundary, since lines are being rasterized, the <i>sample_buffer</i> in between may map multiple pixels if the 
+      sample is greater than 1 but this does not have any effect on the actual <i>framebuffer</i> since they are averaged out again (Step 4).</li>
+    <li>Based on the <i>sample_rate</i> increasing, it is no longer a 1:1 mapping between the <i>sample_buffer</i> and <i>framebuffer</i>, so instead 
+      of directly mapping the <i>sample_buffer</i> pixels to the <i>framebuffer</i> pixels, colors of the <i>sample_buffer</i> are averaged and then
+      the <i>framebuffer</i> takes on the average color of the supersampled pixels (Step 5).</li>
   </ul>
 </p>
+    
+<p>Below are the results of rendering <i>basic/test4.svg</i> at from sample rates of 1, 4, and 16, which show less aliasing and jaggies as the 
+  <i>sample_rate</i> increases. In the zoomed in view, we can see different shades of the original color (from the supersampling and averaging) 
+  on the border once the <i>sample_rate</i> is greater than 1, and comparing <i>sample_rate</i> 4 and 16 we can see a larger variation in shades 
+  of the original color with <i>sample_rate</i> of 16. These extra variations of color let the border seem smoother and more accurate on the main rendered image.</p>
   
-<p>screenshots of basic/test4.svg with the default viewing parameters at sample rates 1, 4, and 16. </p>
 <div align="middle">
   <table style="width=100%">
     <tr>
@@ -100,13 +130,16 @@ Our algorithm is no worse than one that checks each sample within the bounding b
     </tr>
   </table>
 </div>
-<p>The results from <i>sample_rate</i> 1, 4, and 16 show less extreme jaggies each time you increase the <i>sample_rate</i>. In the zoomed in portion, we can see different shades of the original color (from the supersampling and averaging) on the border once the <i>sample_rate</i> is greater than 1, and comparing <i>sample_rate</i> 4 and 16 we can see a larger variation in shades of the original color with <i>sample_rate</i> of 16. These extra variations of color let the border seem smoother when looking at the image from farther away.</p>
-
+<br>
+<br>
 
 <h3 align="middle">Part 3: Transforms</h3>
-<p>We gave our cubeman a fancy shirt and a hat, and had him dance with one arm up and one arm down, picking up one leg, bent at the knee.</p>
-
-
+  <p>In this task, we implemented pixel transformations including translation, scaling, and rotation. As a demonstration, we rendered the given 
+    cubeman with some modifications. We gave the cubeman a fancy shirt and a hat, and had him dance with one arm up and one arm down, picking up 
+    one leg, bent at the knee.</p>
+  
+<br>
+<br>   
 <h2 align="middle">Section II: Sampling</h2>
 
 <h3 align="middle">Part 4: Barycentric coordinates</h3>
