--- a/proj1/index.html
+++ b/proj1/index.html
@@ -134,6 +134,17 @@ Our algorithm is no worse than one that checks each sample within the bounding b
 <br>
 
 <h3 align="middle">Part 3: Transforms</h3>
+    
+<div align="middle">
+  <table style="width=100%">
+    <tr>
+      <td>
+        <img src="images/my_robot.png" align="middle" width="400px"/>
+      </td>
+    </tr>
+  </table>
+</div>
+    
   <p>In this task, we implemented pixel transformations including translation, scaling, and rotation. As a demonstration, we rendered the given 
     cubeman with some modifications. We gave the cubeman a fancy shirt and a hat, and had him dance with one arm up and one arm down, picking up 
     one leg, bent at the knee.</p>
