--- a/proj1/index.html
+++ b/proj1/index.html
@@ -81,7 +81,7 @@ Our algorithm is no worse than one that checks each sample within the bounding b
     However, if the <i>sampling_rate</i> is now greater than 1 and we resize the <i>sample_buffer</i>, 1 pixel in <i>rasterize_line</i> or 
     <i>rasterize_point</i> actually maps to <i>sample_rate</i> number of pixels in the <i>sample_buffer</i>, so we modified <i>fill_pixel</i> to correctly
     fill in all the necessary pixels based on the <i>sampling_rate</i>.</li>
-  <li>Finally, in <i>resolve_to_framebuffer<i>, we need to map our supersampled pixels back into the single pixel that actually maps to the 
+  <li>Finally, in <i>resolve_to_framebuffer</i>, we need to map our supersampled pixels back into the single pixel that actually maps to the 
     <i>framebuffer</i>. To do this, we iterate over the pixels of the <i>framebuffer</i> and pick out the <i>sample_rate<i> number of pixels in the 
     <i>sample_buffer</i> associated with the pixel. We then average the color of all these subsamples to set the pixel color of the <i>framebuffer</i>.</li>
   </ol></p>
