--- a/proj1/index.html
+++ b/proj1/index.html
@@ -109,7 +109,7 @@ Our algorithm is no worse than one that checks each sample within the bounding b
   <i>sample_rate</i> increases. In the zoomed in view, we can see different shades of the original color (from the supersampling and averaging) 
   on the border once the <i>sample_rate</i> is greater than 1, and comparing <i>sample_rate</i> 4 and 16 we can see a larger variation in shades 
   of the original color with <i>sample_rate</i> of 16. These extra variations of color let the border seem smoother and more accurate on the main rendered image.</p>
-  
+<br>  
 <div align="middle">
   <table style="width=100%">
     <tr>
@@ -250,7 +250,19 @@ Our algorithm is no worse than one that checks each sample within the bounding b
     </tr>
   </table>
 </div>
-
+<br>
+<div align="middle">
+  <table style="width=100%">
+    <tr>
+      <td>
+        <img src="images/frog.png" align="middle" width="400px"/>
+        <figcaption align="middle">original frog image.</figcaption>
+      </td>
+    </tr>
+  </table>
+</div>
+<br>
+<br>
 
 <h2 align="middle">Section III: Art Competition</h2>
 <p>If you are not participating in the optional art competition, don't worry about this section!</p>
