--- a/proj1/index.html
+++ b/proj1/index.html
@@ -271,5 +271,7 @@ Our algorithm is no worse than one that checks each sample within the bounding b
 
 <h3 align="middle">Part 7: Draw something interesting!</h3>
 
+<p>link to our webpage: <a href="https://srisainachuri.github.io/cs184-project-portfolio/proj1/index.html">https://srisainachuri.github.io/cs184-project-portfolio/proj1/index.html</a></p>
+
 </body>
 </html>
