--- a/proj1/index.html
+++ b/proj1/index.html
@@ -275,12 +275,7 @@ Our algorithm is no worse than one that checks each sample within the bounding b
 <br>
 <br>
 
-<h2 align="middle">Section III: Art Competition</h2>
-<p>If you are not participating in the optional art competition, don't worry about this section!</p>
-
-<h3 align="middle">Part 7: Draw something interesting!</h3>
-
-<p>link to our webpage: <a href="https://srisainachuri.github.io/cs184-project-portfolio/proj1/index.html">https://srisainachuri.github.io/cs184-project-portfolio/proj1/index.html</a></p>
+<p>Link to our webpage: <a href="https://srisainachuri.github.io/cs184-project-portfolio/proj1/index.html">https://srisainachuri.github.io/cs184-project-portfolio/proj1/index.html</a></p>
 
 </body>
 </html>
